Use Java 16 and alpine